--- a/package.json
+++ b/package.json
@@ -2,11 +2,12 @@
   "name": "final-project-jiajun-jiao",
   "version": "1.0.0",
   "description": "<!-- (__TODO__: your project name) -->",
-  "main": "index.js",
+  "main": "src/app.mjs",
   "dependencies": {
     "accepts": "^1.3.8",
     "array-flatten": "^1.1.1",
     "base64-js": "^1.5.1",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.1",
     "bowser": "^2.11.0",
     "bson": "^4.7.0",
@@ -55,12 +56,14 @@
     "minimist": "^1.2.7",
     "mongodb": "^4.11.0",
     "mongodb-connection-string-url": "^2.5.4",
-    "mongoose": "^6.7.0",
+    "mongoose": "^6.7.2",
+    "mongoose-slug-plugin": "^2.1.0",
     "mpath": "^0.9.0",
     "mquery": "^4.0.3",
     "ms": "^2.1.3",
     "negotiator": "^0.6.3",
     "neo-async": "^2.6.2",
+    "nodemon": "^2.0.20",
     "object-inspect": "^1.12.2",
     "on-finished": "^2.4.1",
     "on-headers": "^1.0.2",
