--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "on-finished": "^2.4.1",
     "on-headers": "^1.0.2",
     "parseurl": "^1.3.3",
+    "passport-local": "^1.0.0",
     "path": "^0.12.7",
     "path-to-regexp": "^0.1.7",
     "process": "^0.11.10",
@@ -129,18 +130,18 @@
     "jest": "^29.3.1"
   },
   "jest": {
-		"testMatch": [
-			"**/__tests__/**/*.?(m|c)js?(x)",
-			"**/?(*.)(spec|test).?(m|c)js?(x)"
-		],
-		"moduleFileExtensions": [
-			"js",
-			"cjs",
-			"mjs"
-		],
-		"transform": {
-			"^.+\\.[t|j]sx?$": "babel-jest", 
-			"^.+.m?js$": "babel-jest"
-		}
-	}
+    "testMatch": [
+      "**/__tests__/**/*.?(m|c)js?(x)",
+      "**/?(*.)(spec|test).?(m|c)js?(x)"
+    ],
+    "moduleFileExtensions": [
+      "js",
+      "cjs",
+      "mjs"
+    ],
+    "transform": {
+      "^.+\\.[t|j]sx?$": "babel-jest",
+      "^.+.m?js$": "babel-jest"
+    }
+  }
 }
