--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "mime-types": "^2.1.35",
     "minimist": "^1.2.7",
     "mocha": "^10.1.0",
+    "mock-import": "^3.0.4",
     "mongodb": "^4.11.0",
     "mongodb-connection-string-url": "^2.5.4",
     "mongoose": "^6.7.2",
@@ -126,6 +127,7 @@
   },
   "homepage": "https://github.com/nyu-csci-ua-0467-001-002-fall-2022/final-project-Jiajun-Jiao#readme",
   "devDependencies": {
+    "chai": "^4.3.7",
     "jasmine": "^4.5.0",
     "jest": "^29.3.1"
   },
