--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "base64-js": "^1.5.1",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.1",
+    "bootstrap": "^5.2.3",
     "bowser": "^2.11.0",
     "bson": "^4.7.0",
     "buffer": "^5.7.1",
