Added code comments

--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
+# refrernce: 
+# https://www.npmjs.com/package/dotenvts
 localPORT=3000
 MONGOOSE_URL=mongodb://localhost/finalprojectconfig
 secret=secret cookie thang
